--- a/MoneyOs-441288a40188a78a9c96230ba23fcf68cfb30326/app/core/visuals/ai_video/requirements_ai_video.txt
+++ b/MoneyOs-441288a40188a78a9c96230ba23fcf68cfb30326/app/core/visuals/ai_video/requirements_ai_video.txt
@@ -3,6 +3,8 @@ transformers==4.44.2
 accelerate==0.33.0
 safetensors==0.4.5
 sentencepiece==0.2.0
+tiktoken==0.7.0
+protobuf==5.27.3
 torch==2.3.1
 torchvision==0.18.1
 opencv-python==4.10.0.84
